# unitycatalog-rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  buf.gen.yaml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml  client.yml
client/unitycatalog/: Cargo.toml
client/unitycatalog-sys/: Cargo.toml  README.md
client/unitycatalog-sys/docs/: AwsCredentials.md  CatalogInfo.md  CatalogsApi.md  ColumnInfo.md  ColumnTypeName.md  CreateCatalog.md  CreateFunction.md  CreateFunctionRequest.md  CreateSchema.md  CreateTable.md  CreateVolumeRequestContent.md  DataSourceFormat.md  Dependency.md  DependencyList.md  FunctionDependency.md  FunctionInfo.md  FunctionParameterInfo.md  FunctionParameterInfos.md  FunctionParameterMode.md  FunctionParameterType.md  FunctionsApi.md  GenerateTemporaryTableCredential.md  GenerateTemporaryTableCredentialResponse.md  GenerateTemporaryVolumeCredential.md  GenerateTemporaryVolumeCredentialResponse.md  ListCatalogsResponse.md  ListFunctionsResponse.md  ListSchemasResponse.md  ListTablesResponse.md  ListVolumesResponseContent.md  SchemaInfo.md  SchemasApi.md  TableDependency.md  TableInfo.md  TableOperation.md  TableType.md  TablesApi.md  TemporaryTableCredentialsApi.md  TemporaryVolumeCredentialsApi.md  UpdateCatalog.md  (+6 more)
client/unitycatalog-sys/src/apis/: catalogs_api.rs  configuration.rs  functions_api.rs  mod.rs  schemas_api.rs  tables_api.rs  temporary_table_credentials_api.rs  temporary_volume_credentials_api.rs  volumes_api.rs
client/unitycatalog-sys/src/models/: aws_credentials.rs  catalog_info.rs  column_info.rs  column_type_name.rs  create_catalog.rs  create_function.rs  create_function_request.rs  create_schema.rs  create_table.rs  create_volume_request_content.rs  data_source_format.rs  dependency.rs  dependency_list.rs  function_dependency.rs  function_info.rs  function_parameter_info.rs  function_parameter_infos.rs  function_parameter_mode.rs  function_parameter_type.rs  generate_temporary_table_credential.rs  generate_temporary_table_credential_response.rs  generate_temporary_volume_credential.rs  generate_temporary_volume_credential_response.rs  list_catalogs_response.rs  list_functions_response.rs  list_schemas_response.rs  list_tables_response.rs  list_volumes_response_content.rs  mod.rs  schema_info.rs  table_dependency.rs  table_info.rs  table_operation.rs  table_type.rs  update_catalog.rs  update_schema.rs  update_volume_request_content.rs  volume_info.rs  volume_operation.rs  volume_type.rs
models/: Cargo.toml  README.md  openapi.json
models/src/: lib.rs
models/src/models/: aws_credentials.rs  catalog_info.rs  column_info.rs  column_type_name.rs  create_catalog.rs  create_function.rs  create_function_request.rs  create_schema.rs  create_table.rs  create_volume_request_content.rs  data_source_format.rs  dependency.rs  dependency_list.rs  function_dependency.rs  function_info.rs  function_parameter_info.rs  function_parameter_infos.rs  function_parameter_mode.rs  function_parameter_type.rs  generate_temporary_table_credential.rs  generate_temporary_table_credential_response.rs  generate_temporary_volume_credential.rs  generate_temporary_volume_credential_response.rs  list_catalogs_response.rs  list_functions_response.rs  list_schemas_response.rs  list_tables_response.rs  list_volumes_response_content.rs  schema_info.rs  table_dependency.rs  table_info.rs  table_operation.rs  table_type.rs  update_catalog.rs  update_schema.rs  update_volume_request_content.rs  volume_info.rs  volume_operation.rs  volume_type.rs
proto/unitycatalog/catalogs/v1/: api.proto  models.proto
proto/unitycatalog/functions/v1/: api.proto  models.proto
proto/unitycatalog/schemas/v1/: api.proto  models.proto
proto/unitycatalog/tables/v1/: api.proto  models.proto
proto/unitycatalog/v1/: models.proto
proto/unitycatalog/volumes/v1/: api.proto  models.proto
server/: Cargo.toml
server/src/: main.rs  state.rs
server/src/routes/: catalogs.rs  functions.rs  mod.rs  schemas.rs  tables.rs  volumes.rs
