[package]
name = "unitycatalog-rs"
version = "0.1.0"
edition = "2021"
description = "Open, Multi-modal Catalog for Data & AI"
repository = "https://github.com/abrassel/unitycatalog-rs"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
