[workspace]
members = [
    "server",
    "models",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.0.1"

[workspace.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tracing = { version = "^0.1.40" }
tracing-subscriber = { version = "^0.3.18", features = ["env-filter"] }
uuid = { version = "^1.8", features = ["serde", "v4"] }