[package]
name = "unitycatalog-models"
description = "Generated structs for Unity Catalog models"

edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
strum = { version = "0.26", features = ["derive"] }

chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
